--- a/app.json
+++ b/app.json
@@ -1,11 +1,20 @@
 {
   "pages": [
-    "pages/login/login",
     "pages/main/main",
-    "pages/user/user",
+    "pages/login/login",
+    "pages/queue/queue",
+    "pages/print/print",
+    
+    "pages/foundpwd/foundpwd",
+    "pages/updatepwd/updatepwd",
     "pages/register/register",
-    "pages/print/print"
-
+    
+    "pages/myprint/myprint",
+    
+    
+    "pages/user/user"
+  
+    
   ],
   "tabBar": {
     "color": "#2c2c2c",
